--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 spring.application.name=betterreads-data-loader
 
 spring.main.allow-circular-references=true
@@ -16,4 +16,4 @@ datastax.astra.secure-connect-bundel=secure-connect.zip
 astra.db.id=
 astra.db.region=asia-south1
 astra.db.keyspace=main
-astra.db.application.token=AstraCS:
+astra.db.application.token=
